# ferrocache

./: .gitignore  BENCHMARKING.md  CLAUDE.md  Cargo.toml  PROJECT_PLAN.md  README.md  STUDY_PLAN.md  ferrocache.toml.example  load_test.sh
.claude/: settings.json
benches/: concurrent_ops.rs  server_throughput.rs
deploy/: README.md  apm-server.yml  docker-compose.yaml  otel-collector-config.yaml
docs/: ARCHITECTURE.md  BENCHMARK_ACCURACY.md  CHANGELOG_BENCHMARKS.md  CLAUDE_WORKFLOW.md  RESP_PROTOCOL.md  ZED_SETUP.md
examples/: atomic_demo.rs  bytes_demo.rs  cache_flow_demo.rs  dashmap_sharding_demo.rs  eviction_debug.rs  lru_comparison_demo.rs  size_tracking_demo.rs
proptest-regressions/protocol/: proptests.txt
src/: config.rs  lib.rs  main.rs  telemetry.rs
src/cache/: entry.rs  lru.rs  metrics.rs  mod.rs  storage.rs
src/commands/: handlers.rs  mod.rs
src/expiration/: reaper.rs
src/protocol/: mod.rs  parser.rs  proptest_helpers.rs  proptests.rs  serializer.rs
src/server/: connection.rs  mod.rs
